feat(Line): 구간을 추가하는 기능 추가